@@ -306,6 +306,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 2015) Add "\sim" to ~ conversion for HTML rendering
 * (bug 6029) Improvement to German localisation (de)
 * (bug 5015) Update be: magic words
+* (bug 3974) Add parameter for site URL to "passwordremindertext"
 
 == Compatibility ==
 
